Implemented responsive design adjustments in swiper component for better user experience. - Introduced new image assets for food delivery. - Improved cart service to automatically refresh cart count on initialization

--- a/client/src/app/common/nav-bar/nav-bar.component.html
+++ b/client/src/app/common/nav-bar/nav-bar.component.html
@@ -11,9 +11,9 @@
         <div class="collapse navbar-collapse" id="subNavbar">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a class="nav-link text-white" href="javascript:;" (click)="OpenSideBar()">All</a>
-                </li>
+                </li> -->
                 <li class="nav-item">
                     <a class="nav-link text-white" [routerLink]="['/food','veg']">Veg</a>
                 </li>
