--- a/client/src/app/common/swiper/swiper.component.html
+++ b/client/src/app/common/swiper/swiper.component.html
@@ -1,12 +1,12 @@
-<section id="swiper" class="d-flex">
+<section id="swiper" class="d-flex w-100">
     <div style="position: relative;width: 100%;" id="amazonSwiper" class="carousel slide" data-bs-ride="carousel"
-        data-bs-interval="3000">
+        data-bs-interval="5000">
 
         <!-- Indicators -->
 
 
         <!-- Slides -->
-        <button><div class="carousel-inner">
+        <div class="carousel-inner">
             <div class="carousel-item active img-wrapper"[routerLink]="['/food','Korean Spicy Fest']">
                 <img src="assets/img/korean fest.jpeg" class="d-block w-100" alt="Banner 1">
             </div>
@@ -26,7 +26,7 @@
                 <img src="assets/img/slide img/forthimage.jpeg" class="d-block w-100" alt="Banner 4">
             </div>
             
-        </div></button>
+        </div>
 
         <!-- Controls -->
         <button class="carousel-control-prev" type="button" data-bs-target="#amazonSwiper" data-bs-slide="prev">
