--- a/client/src/app/common/header/header.component.css
+++ b/client/src/app/common/header/header.component.css
@@ -65,3 +65,18 @@
 .custom-toggle {
   transition: background-color 0.3s ease, border-color 0.3s ease;
 }
+
+.cart-icon {
+  position: relative;
+}
+
+.cart-count-badge {
+  position: absolute;
+  top: -8px;
+  right: -10px;
+  background-color: orange;
+  color: white;
+  padding: 2px 6px;
+  border-radius: 50%;
+  font-size: 12px;
+}
