--- a/client/src/app/common/header/header.component.html
+++ b/client/src/app/common/header/header.component.html
@@ -3,7 +3,7 @@
 
     <!-- Logo -->
     <a class="navbar-brand ms-3" href="#">
-      <img src="assets/img/burger king.png" alt="Logo" style="width: 60px; border-radius: 50%;">
+      <img src="assets/img/burger king.png" alt="Logo" class="bg-white " style="position: relative;top: 10px; width: 70px; border-radius: 50%;">
     </a>
 
     <!-- Delivery Text -->
